# murmur

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml  release-dmg.yml  release.yml  test.yml
macos/Murmur/Murmur.xcodeproj/: project.pbxproj
macos/Murmur/Murmur.xcodeproj/xcshareddata/xcschemes/: Murmur.xcscheme
macos/Murmur/Murmur/App/: AppDelegate.swift  AppState.swift  MurmurApp.swift
macos/Murmur/Murmur/Audio/: AudioRecorder.swift
macos/Murmur/Murmur/Hotkey/: HotkeyManager.swift  KeyCodeMap.swift
macos/Murmur/Murmur/Overlay/: IndicatorLayer.swift  IndicatorWindow.swift
macos/Murmur/Murmur/Paste/: PasteManager.swift
macos/Murmur/Murmur/Permissions/: PermissionManager.swift
macos/Murmur/Murmur/Resources/: Info.plist
macos/Murmur/Murmur/Settings/: HotkeyRecorderView.swift  SettingsView.swift  SettingsWindowController.swift
macos/Murmur/Murmur/Transcription/: TranscriptionManager.swift
murmur/: __init__.py  app.py  audio.py  hotkey.py  logging_config.py  main.py  overlay.py  paste.py  settings.py  snippets.py  transcribe.py  updater.py
numba/: __init__.py
scripts/: build-macos-dmg.sh  package.sh
tests/: conftest.py  test_app.py  test_audio.py  test_hotkey.py  test_integration.py  test_main.py  test_numba_shim.py  test_paste.py  test_settings.py  test_snippets.py  test_transcribe.py  test_updater.py
